name:                joje
version:             0.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Veljko Srdarevic <monk.nt@gmail.com>
maintainer:          Veljko Srdarevic <monk.nt@gmail.com>
copyright:           (c) 2016-Present Veljko Srdarevic
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  static/404.html
  README.md

Library
  exposed-modules:     Web.Joje
                       Web.Joje.Internal
  other-modules:       Web.Joje.Router
                       Web.Joje.DefaultHandlers
                       Web.Joje.Router.Data
                       Web.Joje.Router.RouteConstructs
                       Web.Joje.Data
  ghc-options:	       -Wall -Werror
  other-extensions:    OverloadedStrings
  build-depends:       base      >= 4.3.1 && <5,
                       wai       >= 3.0.0 && < 3.3,
                       wai-extra >= 3.0.0 && < 3.1,
                       warp      >= 3.0.0 && < 3.3,
                       parsec    >= 3.0.0 && < 3.2,
                       http-types,
                       bytestring,
                       aeson,
                       containers,
                       bytestring-trie
  hs-source-dirs:      src/main
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: src/test
  ghc-options: -Wall
  build-depends:
    base  >=4.3.1 && <5,
    wai       >= 3.0.0 && < 3.3,
    wai-extra >= 3.0.0 && < 3.1,
    hspec >= 2.0.0 && < 3,
    bytestring,
    http-types,
    joje
  other-modules:
    Web.JojeSpec
  default-language: Haskell2010
